k8s/immich/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`photos.kevingomez.fr`)
      services:
        - kind: Service
          name: immich
          port: http
  tls:
    secretName: immich-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-http
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`photos.kevingomez.fr`)
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: immich
          port: http
